bugfix: settings menu now working on iOS

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,3 +3,11 @@
     width:100%;
     margin-top: 0
 }
+
+.correct {
+    background-color: green;
+}
+
+.wrong {
+    background-color: red;
+}
